# CodeConvert

./: .gitignore  CMakeLists.txt  README.md
src/: encodedetector.cpp  encodedetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
test/: App_utf8.java  build_gb2312.bat  config_gb2312.txt  data_gb2312.h  hello_utf8bom.c  main_utf8bom.cpp  readme_utf8bom.txt  script_utf8.py  utils_utf8bom.h
